# tc

./: Cargo.toml  README.md  TODO.md  build.rs
benches/: ten_mb_text_file.rs
src/: config.rs  count.rs  lib.rs  main.rs
test_data/: tiny.txt
