[package]
name = "tc"
version = "0.1.0"
authors = ["Adam P. Regasz-Rethy <adam.regaszrethy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc="*"

[dependencies]
tree-sitter = "0.17.1"
structopt = "0.3"
walkdir = "2"
utf-8 = "0.7.5"
colored = "2"
term-table = { git = "https://github.com/RRethy/term-table-rs", branch = "fix-colored-tables" }
num-format = "0.4.0"
bytecount = "0.6.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ten_mb_text_file"
harness = false
